Closed Bug 433264 Opened 16 years ago Closed 16 years ago

Address book doesn't appear after upgrade

Categories

(Thunderbird :: Address Book, defect)

PowerPC
macOS
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: mitra_lists, Assigned: standard8)

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-GB; rv:1.9b5) Gecko/2008032619 Firefox/3.0b5
Build Identifier: version 3.0a1 (2008050714)

After upgrading from 2.0.0.6 none of the Address Books appear.  If I go back to 2.0.0.6 they are all still there. 



Reproducible: Always

Steps to Reproduce:
1. Upgrade to 3.*
2. Open Address Book
3.
Actual Results:  
No address books listed

Expected Results:  
Should see a list of Address books (and something that shows the OSX Address book).

Only odd thing I can think of is that the reason I'm on 2.0.0.6 is because it was the last Thunderbird to have the OSX extension compiled into it, and I have the applicable preferences entries to enable that.  

The Mac OSX book doens't show up either.
Please can you list your lines in prefs.js that relate to the OS X directory.

Also, please could could you check the Error Console (under the tools menu) for any errors that may be related.
Sorry for the slow reply - I haven't figured out how to get Bugzilla to email me when a bug I've reported is commented on.

The lines are: 
user_pref("ldap_2.servers.osx.description", "OS X");
user_pref("ldap_2.servers.osx.dirType", 3);
user_pref("ldap_2.servers.osx.filename", "osx.mab");
user_pref("ldap_2.servers.osx.replication.lastChangeNumber", 0);
user_pref("ldap_2.servers.osx.uri", "moz-abOSXdirectory:///");

The Error Console only says 
Error: status is null
Source File: chrome://adblockplus/content/overlay.js

I also see another bug - which I know I reported, but seems to have vanished - where it repetitively asks for hte Master password, looks like one time per account, so maybe it isn't remembering that correctly - not sure if that is relevant.

Note everyone I know who still uses the Mac version has stuck with 2.0.0.6 with the OSX extension in order to have access to Mac Address Book. (Many others migrated to Apple's Mail because 2.0.0.6 has too many bugs / lack fo features, and they need the Address Book integration that is in Apple's Mail.) So I think this is going to impact a lot of people.

(In reply to comment #2)
> user_pref("ldap_2.servers.osx.uri", "moz-abOSXdirectory:///");

So here's the problem. On trunk builds we need "moz-abosxdirectory:///" - this is the correct standard. Unfortunately on the 2.0.0.6 builds it was implemented wrong.

cc'ing David, I'd like to what he thinks about the way forward for this.
I can confirm that changing that string to abosxdirectory fixes the bug.

Its somewhat odd that having abOSXdirectory should also prevent any other address books showing up.

For consideration to prior users of 2.0.0.6 it might be worth a workaround.

- Mitra
Attached patch Proposed FixSplinter Review
Having come across this today in a slightly different form (due to the build I'm playing around with), I realised that we would be much better off if nsAbBSDirectory just ignored errors and didn't propagate up the chain.

If we take this patch, then for this bug, what will happen is that a user with the OS X address book enabled on branch will start up Thunderbird/Address Book and the Mac OS X address book won't be there (but the other address books *will* be). They can then simply go to the File menu and re-enable the OS X address book from there. This will overwrite (and fix) the preference value and all will be fine.

We probably should consider this for the 1.8 branch, because if they go back to a 2.0.0.x build they will get the same problem. Though we can't actually fix the 2.0.0.6 builds that were done with Mac OS X book in.
Assignee: nobody → bugzilla
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #323298 - Flags: superreview?(bienvenu)
Attachment #323298 - Flags: review?(bienvenu)
Attachment #323298 - Flags: superreview?(bienvenu)
Attachment #323298 - Flags: superreview+
Attachment #323298 - Flags: review?(bienvenu)
Attachment #323298 - Flags: review+
I've checked this in. It should be available in today's nightlies (out in a few hours). Mitra any chance you could take a look and see what you think about this solution?
Sorry for slow response, I switched back to 2.0.0.6 because 3.0a1 crashed so often ! 

This seems to work, I think enabling from the File menu fixes all my concerns for existing users.  

There are two more obscure problems related to this - 
1: If you come up without the OSX Address book then filters that refer to it seem to reset to the "Personal Address Book".  I can't repeat this because of ...
2: There seems to be no way to turn OFF the OSX Address book once you've enabled it. 

(In reply to comment #7)
> 2: There seems to be no way to turn OFF the OSX Address book once you've
> enabled it. 

With the User Interface changes I put in recently, you can Select File->Use Mac OS X Address Book or just delete the address book (right click, delete).

Marking this bug as fixed.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: