Bug 433264 Address book doesn't appear after upgrade - be more tolerant to errors. r/sr=bienvenu